--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,8 @@
 # Database
-DATABASE_URL="file:./prisma/dev.db"
+# For local development (PostgreSQL via Docker):
+DATABASE_URL="postgresql://livey:livey_password@localhost:5432/livey_payment"
+# For SQLite (alternative for local development):
+# DATABASE_URL="file:./prisma/dev.db"
 
 # Stripe (server-side)
 STRIPE_SECRET_KEY=sk_test_your_stripe_secret_key_here
