--- a/.env.example
+++ b/.env.example
@@ -13,6 +13,10 @@ STRIPE_WEBHOOK_SECRET=whsec_test_webhook_secret_placeholder
 VITE_STRIPE_PUBLISHABLE_KEY=pk_test_your_stripe_publishable_key_here
 
 # Application
+# EMAIL_FRONTEND_URL is used for payment links in emails (must be publicly accessible)
+# Set this to your production frontend domain (e.g., https://yourfrontend.com)
+EMAIL_FRONTEND_URL=http://localhost:5173
+# APP_URL is kept for backwards compatibility
 APP_URL=http://localhost:5173
 PORT=3001
 NODE_ENV=development
