--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -32,6 +32,7 @@ services:
       - STRIPE_SECRET_KEY=${STRIPE_SECRET_KEY}
       - STRIPE_PUBLISHABLE_KEY=${STRIPE_PUBLISHABLE_KEY}
       - STRIPE_WEBHOOK_SECRET=${STRIPE_WEBHOOK_SECRET}
+      - EMAIL_FRONTEND_URL=${EMAIL_FRONTEND_URL:-http://localhost:5173}
       - APP_URL=${APP_URL:-http://localhost:5173}
       - PORT=3001
       - NODE_ENV=${NODE_ENV:-production}
