add back migration

--- a/.gitignore
+++ b/.gitignore
@@ -64,7 +64,7 @@ prod.db
 prod.db-journal
 
 # Prisma
-prisma/migrations/**/*.sql
+# Keep migration SQL files in version control
 !prisma/migrations/migration_lock.toml
 
 # Temporary files
